before route layout issue fixed

--- a/university-attainu/src/components/style/Sidebar.css
+++ b/university-attainu/src/components/style/Sidebar.css
@@ -174,6 +174,12 @@ ul.CTAs a {
   margin-bottom: 5px;
 }
 
+/* If active */
+/* .active Link:hover{
+  background-color: var(--yellow);
+  color: white;
+} */
+
 /* ---------------------------------------------------
     CONTENT STYLE
 ----------------------------------------------------- */
